Add new route to access elements, add option to access weather data in a desired interval
