# src/routes/current.ts
@@ -1,48 +1,99 @@
 import express, {Request, Response, NextFunction } from "express";
-import { body, query, validationResult, checkSchema, checkExact, ValidationError }  from "express-validator";
-import CurrentConditions from "../models/CurrentConditions";
+import { body, query, param, validationResult, checkSchema, checkExact, ValidationError, Result }  from "express-validator";
+import CurrentConditions, { CurrentConditionsElement, CurrentConditionsElements, IntervalDescriptor, IntervalDescriptors, intervalOf } from "../models/CurrentConditions";
 import APIError from "../error-handling/APIError";
 import asyncHandler from "../error-handling/asyncHandler";
-import currentConditionsSchema from "../validationSchemas/currentConditionsSchema";
+import currentConditionsSchema from "../validation/currentConditionsSchema";
 import mongoose, { Types } from "mongoose";
 import log from "../log";
 import { PressureUnit, RainUnit, SolarRadiationUnit, TemperatureUnit, WindUnit } from "vant-environment/units";
 import protect from "../security/protect";
+import recorder from "../recorder";
+import validateUnits from "../validation/validateUnits";
 
 const router = express.Router();
 
-/* GET current weather conditions */
-router.get('/',
-    // api key authentification
+router.get(['/element/:element/:interval', '/element/:element'],
     protect("read"),
-    // query validation
-    query("rainUnit").optional().isIn(["in", "mm"]).withMessage("Invalid rain unit. Allowed values are: 'in', 'mm'"),
-    query("windUnit").optional().isIn(["km/h", "mph", "ft/s", "knots", "Bft", "m/s"]).withMessage("Invalid wind unit. Allowed values are: 'km/h', 'mph', 'ft/s', 'knots', 'Bft', 'm/s'"),
-    query("pressureUnit").optional().isIn(["hPa", "inHg", "mmHg", "mb"]).withMessage("Invalid pressure unit. Allowed values are: 'hPa', 'inHg', 'mmHg', 'mb'"),
-    query("solarRadiationUnit").optional().isIn(["W/m²"]).withMessage("Invalid solar radiation unit. Allowed values are: 'W/m²'"),
-    query("temperatureUnit").optional().isIn(["°C", "°F"]).withMessage("Invalid temperature unit. Allowed values are: '°C', '°F'"),
+    ...validateUnits,
+    param("interval").default("live" as IntervalDescriptor).isIn(IntervalDescriptors).withMessage("Invalid or missing interval entered!"),
+    param("element").isIn(CurrentConditionsElements).withMessage("Invalid weather element!"),
+    asyncHandler(async (req, res, next) => {
+        const result : Result<ValidationError> = validationResult(req);
+
+        if(result.isEmpty()){
+            const records = await CurrentConditions.find({ interval: intervalOf(req.params.interval as IntervalDescriptor) || 0 }).sort({
+                time: "asc",
+            }).select({
+                _id: 0,
+                time: 1,
+                [req.params.element]: 1,
+            });
+
+            if(records.length === 0){
+                return next(new APIError("No current weather conditions available. This error usually happens if no weather data hasn't been uploaded!", 503));
+            }
+
+            const results = [];
+            for(let i = 0; i < records.length; ++i){
+                records[i].changeUnits({
+                    rain: req.query.rain as RainUnit,
+                    wind: req.query.wind as WindUnit,
+                    temperature: req.query.temperature as TemperatureUnit,
+                    solarRadiation: req.query.solarRadiation as SolarRadiationUnit,
+                    pressure: req.query.pressure as PressureUnit
+                });
+
+                const result = Object.assign(records[i].toJSON()) as any;
+                result.value = result[req.params.element as CurrentConditionsElement];
+                result[req.params.element] = undefined;
+                
+                results.push(result);
+            }
+
+            res.status(200);
+            res.json({
+                success: true,
+                data: (req.params.interval as IntervalDescriptor) === "live" ? results[0] : results,
+            });
+        }else{
+            return next(new APIError(result.array()[0].msg, 400, result));
+        }
+    })
+);
+
+/* GET current weather conditions */
+router.get(['/', '/:interval'],
+    protect("read"),
+    ...validateUnits,
+    param("interval").default("live" as IntervalDescriptor).isIn(IntervalDescriptors).withMessage("Invalid or missing interval entered!"),
     asyncHandler(async (req, res, next) => {
         const result = validationResult(req);
 
         if (result.isEmpty()) {
             try {
-                let currentConditions = await CurrentConditions.findOne();
-                if (!currentConditions) {
+                const records = await CurrentConditions.find({ interval: intervalOf(req.params.interval as IntervalDescriptor) }).sort({
+                    time: "asc",
+                }).select("-_id -__v");
+
+                if (records.length == 0) {
                     return next(new APIError("No current weather conditions available. This error usually happens if no weather data hasn't been uploaded!", 503))
                 }
                 
                 log.debug("Changing units...");
-                currentConditions.changeUnits({
-                    rain: req.query.rainUnit as RainUnit,
-                    wind: req.query.windUnit as WindUnit,
-                    pressure: req.query.pressureUnit as PressureUnit,
-                    solarRadiation: req.query.solarRadiationUnit as SolarRadiationUnit,
-                    temperature: req.query.temperatureUnit as TemperatureUnit
-                });
+                for(const record of records){
+                    record.changeUnits({
+                        rain: req.query.rainUnit as RainUnit,
+                        wind: req.query.windUnit as WindUnit,
+                        pressure: req.query.pressureUnit as PressureUnit,
+                        solarRadiation: req.query.solarRadiationUnit as SolarRadiationUnit,
+                        temperature: req.query.temperatureUnit as TemperatureUnit
+                    });
+                }
 
                 res.status(200).json({
                     success: true,
-                    data: currentConditions
+                    data: (req.params.interval as IntervalDescriptor) === "live" ? records[0] : records,
                 });
             } catch (err) {
                 return next(new APIError("Failed to access the current weather conditions from the database!", 500, err))
@@ -74,22 +125,11 @@ router.post('/',
                     return next(new APIError("Unknown error while validation!", 500, err));
                 }
             }
-            
-            try {
-                log.debug("Saving new current conditions...");
-                await currentConditions.save({ validateBeforeSave: false });
-            } catch (err) {
-                return next(new APIError("Failed to save current conditions in the database!", 500, err));
-            }
 
-            try {
-                log.debug("Deleting outdated current conditions...");
-                await CurrentConditions.deleteMany({
-                    _id: { $ne: currentConditions._id }
-                });
-
-            } catch (err) {
-                return next(new APIError("Failed to delete existing current conditions in the database!", 500, err));
+            try{
+                await recorder.process(currentConditions);
+            } catch(err){
+                return next(new APIError("Error while processing record!", 500, err));
             }
 
             res.status(201);
